syntax = "proto3";
option go_package = "./gen";

message PostRequest{
	string title = 1;
	string text = 2;
}

message PostResponse{
	string title = 1;
	string text = 2;
}

service PostService{
	rpc CreatePost(PostRequest) returns (PostResponse) {}
}